--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -5,7 +5,7 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     link href="favicon.ico" rel=('shortcut icon') type="image/x-icon"
-    title Megapolis price
+    title price.krsz.ru
 
     = stylesheet_pack_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
@@ -13,25 +13,20 @@ html
     - if (request.user_agent =~ /Mobile/) == nil
       nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
         .container
-          = link_to 'PRICE.KRSZ.RU', stats_path, class: 'nav-brand js-scroll-trigger'
+          = link_to 'PRICE.KRSZ.RU', root_path, class: 'nav-brand js-scroll-trigger'
           button.navbar-toggler.navbar-toggler-right aria-controls="navbarResponsive" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarResponsive" data-toggle="collapse" type="button"
             | Menu
             i.fas.fa-bars
           #navbarResponsive.collapse.navbar-collapse
             ul.navbar-nav.ml-auto
-              / li.nav-item
-              /   a.nav-link.js-scroll-trigger href="#tournment" Игровой день
-              / li.nav-item
-              /   a.nav-link.js-scroll-trigger href="#commands" Составы
-              / li.nav-item
-              /   a.nav-link.js-scroll-trigger href="#games" Игры
               li.nav-item
-                = link_to 'Главная', stats_path, class: 'nav-link'
+                a.nav-link +7 926 199-92-64
 
     - else
       .bg-black
         .btn-group.d-flex.btn-group-lg
-          = link_to 'Главная',             root_path, class: 'btn btn-primary'
+          = link_to 'PRICE.KRSZ.RU', root_path, class: 'btn btn-primary'
+      h1.text-center +7 926 199-92-64
     = yield
 
   footer.bg-black.small.text-center.text-white-50
