--- a/app/views/items/_filter.slim
+++ b/app/views/items/_filter.slim
@@ -7,10 +7,13 @@
         th Тип
         th Количество
         th Цена
-    - @items.each do |item|
+    - @items.each do |ctg, items|
       tr
-        td.text-left = item.name
-        td = item.value
-        td = item.item_type
-        td = item.qty
-        td.text-right = "#{item.price}₽"
+        td colspan=5 = Category.cached_by_id[ctg]&.name
+      - items&.each do |item|
+        tr
+          td.text-left = item.name
+          td = item.value
+          td = item.item_type
+          td = item.qty
+          td.text-right = "#{item.price}₽"
