--- a/app/javascript/packs/stylesheets/greyscale.scss
+++ b/app/javascript/packs/stylesheets/greyscale.scss
@@ -199,7 +199,7 @@
 .signup-section {
   padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(images/pole.jpg);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover
