--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -33,7 +33,7 @@ section.about-section.bg-black.text-center
 
 javascript:
     $( () => $('.manufacturer').on('change', (checkbox) => {
-        debugger;
+        // debugger;
         var mnf_ids = $("#form input[type='checkbox']").map((i, el) => { if (el.checked) return el.dataset.id });
         var params = { manufacturer_ids: mnf_ids.toArray() };
         var searchParams = new URLSearchParams(window.location.search);
