--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,8 +11,8 @@ html
     = javascript_pack_tag 'application'
   body style="background-color: rgba(22,22,22,1)"
     - if (request.user_agent =~ /Mobile/) == nil
-      - ['FOOTBALL', 'PRICE', 'ABOUT', 'FRACTAL', 'WEBCAM'].reverse.each_with_index do |name, index|
-        = link_to name, "https://#{name}.KRSZ.RU", class: "btn btn-primary krsz_items", style: "bottom: #{index * 65 + 10}px;"
+      / - ['FOOTBALL', 'PRICE', 'ABOUT', 'FRACTAL', 'WEBCAM'].reverse.each_with_index do |name, index|
+      /   = link_to name, "https://#{name}.KRSZ.RU", class: "btn btn-primary krsz_items", style: "bottom: #{index * 65 + 10}px;"
       nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
         .container
           = link_to 'PRICE.KRSZ.RU', root_path, class: 'nav-brand js-scroll-trigger'
@@ -25,7 +25,7 @@ html
                 .notice = notice
                 .alert = alert
               li.nav-item
-                a.nav-link +7 926 199-92-64
+                a.nav-link +7 9xx xxx-xx-xx
               - if current_user
                 li.nav-item
                   a.nav-link = current_user.email
@@ -47,8 +47,13 @@ html
     - if (request.user_agent =~ /Mobile/) != nil
       - ['FOOTBALL', 'PRICE', 'NEWS', 'FRACTAL', 'WEBCAM', 'HOME'].reverse.each_with_index do |name, index|
         = link_to name, "https://#{name}.KRSZ.RU", class: "btn btn-primary", style: 'bottom'
-    .container
-      | Copyright &copy; krsz.ru 2019-2020
+    section.contact-section.bg-black
+      .container
+        .social.d-flex.justify-content-center
+          - Common.sites.each do |name|
+            = link_to "https://#{name}.krsz.ru", class: 'mx-2' do
+              i.fab.fa-github
+        | Copyright &copy; krsz.ru 2019-#{Time.now.year}
 
 javascript:
     if ("#{Rails.env}" == 'production') {
