--- a/app/javascript/packs/stylesheets/_custom.scss
+++ b/app/javascript/packs/stylesheets/_custom.scss
@@ -1,5 +1,5 @@
-#pole {
-  background: #000000 url(images/pole.jpg) no-repeat center center;
+#background {
+  background: #000000 url(images/background.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size:    cover;
   -o-background-size:      cover;
